Added bufferdwriter but its not working properly! Will look at this tomorrow